--- a/jsprob/templates/jsprob/list1.html
+++ b/jsprob/templates/jsprob/list1.html
@@ -59,7 +59,7 @@
             alert('Контроль безопасности обнаружил смещение времени! Этап защитан не будет!');
             }
             ds = ost;
-            if (kon>1 || ost>40000) {ost=0;}
+            if (kon!=1 || ost>40000) {ost=0;}
             addEventListener("keyup", function(event) {kk=0;});
             addEventListener("keydown", function(event) {
                   if (event.keyCode>47 && event.keyCode<58 && event.keyCode!=kk)
@@ -108,6 +108,23 @@
                 document.getElementById('err').style.cssText = 'margin-top: 120px; font-style: italic; font-size: 62px; color: red;';
                 ot='';}
                 }
+
+                if (ost<=0 && fl3==0 || prim>=10 && fl3==0)  {
+                    if (ost<0) {ost=0}
+                    Funcend();
+<!--                    localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ost);-->
+<!--                    localStorage.setItem('pravresh', Number(localStorage.getItem('pravresh'))+p1);-->
+<!--                    localStorage.setItem('bezosh', Number(localStorage.getItem('bezosh'))+p0);-->
+<!--                    localStorage.setItem('lvl1', ost);-->
+<!--                    document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';-->
+<!--                    document.cookie = "lelrec15=" + 1 + '$' + ost + '$' + (p0 + p1) + '$' + p0;-->
+<!--                    clearInterval(timerId);-->
+<!--                    fl3=1-->
+<!--                    fl2=1-->
+<!--                    fl1=1-->
+<!--                    window.location.assign('itoglv');-->
+            }
+
             if (fl4==1 && new Date() - new Date(0) - Number(tt) > (2000*po - 1000)) {
                 document.getElementById('byni').style.display='';
                 document.getElementById('btn1').style.display='';
@@ -136,62 +153,71 @@
                 if (po==2) {po=0;}
                 }
 
-            if (ost<=0 && fl3==0 || prim>=10 && fl3==0)  {
-                if (ost<0) {ost=0}
-                document.getElementById('byni').style.display='none';
-                document.getElementById('btn1').style.display='none';
-                document.getElementById('btn2').style.display='none';
-                document.getElementById('btn3').style.display='none';
-                document.getElementById('btn4').style.display='none';
-                document.getElementById('btn5').style.display='none';
-                document.getElementById('btn6').style.display='none';
-                document.getElementById('btn7').style.display='none';
-                document.getElementById('btn8').style.display='none';
-                document.getElementById('btn9').style.display='none';
-                document.getElementById('btn0').style.display='none';
-                document.getElementById('btnd').style.display='none';
-                document.getElementById('vy4').style.display='none';
-                document.getElementById('prim').style.display='none';
-                document.getElementById('prnpr').style.display='none';
-                document.getElementById('timer').style.display='none';
-                if (kon==1) {
-                document.getElementById('end1').innerHTML = 'На разминке набрано очков: ' + ost + '.';
-                document.getElementById('end1').style.cssText = 'margin-top: 70px; font-style: italic;';
-                document.getElementById('end2').innerHTML = document.getElementById('prnpr').innerHTML = 'Решено правильно: '+ (p0 + p1) + ' <br> из них безошибочно: ' + p0 + '<br> двойных ошибок: ' + n;}
-                fl3=1;
-                document.getElementById('end2').style.cssText = 'font-style: italic;';
-                ostf = ost;
-                fl00={{fl00}};
-                sclvus={{sclvus}};
-                minsc={{minsc}};
-                scnow={{scnow}};
-                txta = '';
-                txtb = '';
-                pz=0;
-                pz1=0;
-                pz0=0;
-                if (ostf>Number(sclvus)){
-                pz0=1;
-                if (Number(sclvus)>0) { pz=1;
-                txta = 'Вы улучшили собственный рекорд в этом этапе на ' + (ostf-Number(sclvus)) + '.<br>';}
-                }
-                if (ostf<Number(sclvus)*0.8) {
-                txtb = 'Ваш личный рекорд пройденного этапа куда выше. Соберитесь.<br>';
-                } if (fl00==0 && ostf>Number(minsc)) {
-                pz1=1;
-                txta = txta + 'Вы попадате в ТОП-10 первого этапа. (На данный момент) <br>';
-                } if (fl00==1 && ostf>Number(scnow)) {
-                pz1=2;
-                txta = txta + 'Ваш результат в ТОП-10 пройденного этапа на данный момент улучшен! <br>';
-                }
-                if (pz!=0 || pz1!=0) { txta = '<br>Поздравляем!<br>' + txta;}
-                if (pz0!=0 || pz1!=0) {
-                document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-                document.cookie = "lelrec15=" + sclvus + '$' + ostf;}
-                txta=txtb+txta
-                document.getElementById('end3').innerHTML = txta;
-                document.getElementById('butt').style.display='';
-            }
+<!--            if (ost<=0 && fl3==0 || prim>=10 && fl3==0)  {-->
+<!--                if (ost<0) {ost=0}-->
+<!--&lt;!&ndash;                document.getElementById('byni').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn1').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn2').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn3').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn4').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn5').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn6').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn7').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn8').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn9').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btn0').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('btnd').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('vy4').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('prim').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('prnpr').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('timer').style.display='none';&ndash;&gt;-->
+<!--&lt;!&ndash;                if (kon==1) {&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('end1').innerHTML = 'На разминке набрано очков: ' + ost + '.';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('end1').style.cssText = 'margin-top: 70px; font-style: italic;';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('end2').innerHTML = document.getElementById('prnpr').innerHTML = 'Решено правильно: '+ (p0 + p1) + ' <br> из них безошибочно: ' + p0 + '<br> двойных ошибок: ' + n;}&ndash;&gt;-->
+<!--&lt;!&ndash;                fl3=1;&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('end2').style.cssText = 'font-style: italic;';&ndash;&gt;-->
+<!--&lt;!&ndash;                ostf = ost;&ndash;&gt;-->
+<!--&lt;!&ndash;                fl00={{fl00}};&ndash;&gt;-->
+<!--&lt;!&ndash;                sclvus={{sclvus}};&ndash;&gt;-->
+<!--&lt;!&ndash;                minsc={{minsc}};&ndash;&gt;-->
+<!--&lt;!&ndash;                scnow={{scnow}};&ndash;&gt;-->
+<!--&lt;!&ndash;                txta = '';&ndash;&gt;-->
+<!--&lt;!&ndash;                txtb = '';&ndash;&gt;-->
+<!--&lt;!&ndash;                pz=0;&ndash;&gt;-->
+<!--&lt;!&ndash;                pz1=0;&ndash;&gt;-->
+<!--&lt;!&ndash;                pz0=0;&ndash;&gt;-->
+<!--&lt;!&ndash;                if (ostf>Number(sclvus)){&ndash;&gt;-->
+<!--&lt;!&ndash;                pz0=1;&ndash;&gt;-->
+<!--&lt;!&ndash;                if (Number(sclvus)>0) { pz=1;&ndash;&gt;-->
+<!--&lt;!&ndash;                txta = 'Вы улучшили собственный рекорд в этом этапе на ' + (ostf-Number(sclvus)) + '.<br>';}&ndash;&gt;-->
+<!--&lt;!&ndash;                }&ndash;&gt;-->
+<!--&lt;!&ndash;                if (ostf<Number(sclvus)*0.8) {&ndash;&gt;-->
+<!--&lt;!&ndash;                txtb = 'Ваш личный рекорд пройденного этапа куда выше. Соберитесь.<br>';&ndash;&gt;-->
+<!--&lt;!&ndash;                } if (fl00==0 && ostf>Number(minsc)) {&ndash;&gt;-->
+<!--&lt;!&ndash;                pz1=1;&ndash;&gt;-->
+<!--&lt;!&ndash;                txta = txta + 'Вы попадате в ТОП-10 первого этапа. (На данный момент) <br>';&ndash;&gt;-->
+<!--&lt;!&ndash;                } if (fl00==1 && ostf>Number(scnow)) {&ndash;&gt;-->
+<!--&lt;!&ndash;                pz1=2;&ndash;&gt;-->
+<!--&lt;!&ndash;                txta = txta + 'Ваш результат в ТОП-10 пройденного этапа на данный момент улучшен! <br>';&ndash;&gt;-->
+<!--&lt;!&ndash;                }&ndash;&gt;-->
+<!--&lt;!&ndash;                if (pz!=0 || pz1!=0) { txta = '<br>Поздравляем!<br>' + txta;}&ndash;&gt;-->
+<!--&lt;!&ndash;                if (pz0!=0 || pz1!=0) {&ndash;&gt;-->
+<!--&lt;!&ndash;                document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';&ndash;&gt;-->
+<!--&lt;!&ndash;                document.cookie = "lelrec15=" + sclvus + '$' + ostf;}&ndash;&gt;-->
+<!--&lt;!&ndash;                txta=txtb+txta&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('end3').innerHTML = txta;&ndash;&gt;-->
+<!--&lt;!&ndash;                document.getElementById('butt').style.display='';&ndash;&gt;-->
+<!--                    localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ost);-->
+<!--                    localStorage.setItem('pravresh', Number(localStorage.getItem('pravresh'))+p1);-->
+<!--                    localStorage.setItem('bezosh', Number(localStorage.getItem('bezosh'))+p0);-->
+<!--                    localStorage.setItem('lvl1', ost);-->
+<!--                    document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';-->
+<!--                    document.cookie = "lelrec15=" + 1 + '$' + ost + '$' + (p0 + p1) + '$' + p0;-->
+<!--                    clearInterval(timerId);-->
+<!--                    fl3=1-->
+<!--                    window.location.assign('itoglv');-->
+<!--            }-->
             if (fl3==0)
             {
             document.getElementById('timer').innerHTML = Math.floor(ost/1000);
@@ -216,6 +242,7 @@
                 fl2 = 0;
                 if (po==0) p0++;
                 if (po==1) p1++;
+                if (prim==9) Funcend();
                 po = 0;
                 }
                 else {
@@ -300,12 +327,14 @@
             }
 
         function Funcend() {
-            document.getElementById('butt').style.display='none';
-            localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ostf);
+            localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ost);
             localStorage.setItem('pravresh', Number(localStorage.getItem('pravresh'))+p1);
             localStorage.setItem('bezosh', Number(localStorage.getItem('bezosh'))+p0);
-            localStorage.setItem('lvl1', ostf);
-            window.location.assign('level2');
+            localStorage.setItem('lvl1', ost);
+            document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+            document.cookie = "lelrec15=" + 1 + '$' + ost + '$' + (p0 + p1) + '$' + p0;
+            clearInterval(timerId);
+            window.location.assign('itoglv');
               }
 
         Func();
