--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -72,8 +72,12 @@
     localStorage.setItem('pravresh', 0);
     localStorage.setItem('bezosh', 0);
     localStorage.setItem('totsum', 0);
+    localStorage.setItem('lvl1', 0);
+    localStorage.setItem('lvl2', 0);
+    localStorage.setItem('lvl3', 0);
+    localStorage.setItem('lvl4', 0);
+    localStorage.setItem('lvl5', 0);
     }
-
 
     </script>
 {% endblock %}
