--- a/jsprob/templates/jsprob/list3.html
+++ b/jsprob/templates/jsprob/list3.html
@@ -56,7 +56,7 @@
             alert('Контроль безопасности обнаружил смещение времени! Этап защитан не будет!');
             }
             ds = ost;
-            if (kon>3 || ost>80000) {ost=0;}
+            if (kon!=3 || ost>80000) {ost=0;}
             addEventListener("keyup", function(event) {kk=0;});
             addEventListener("keydown", function(event) {
                   if (event.keyCode>47 && event.keyCode<58 && event.keyCode!=kk)
