--- a/jsprob/templates/jsprob/list5.html
+++ b/jsprob/templates/jsprob/list5.html
@@ -106,6 +106,12 @@
                 document.getElementById('err').style.cssText = 'margin-top: 120px; font-style: italic; font-size: 62px; color: red;';
                 ot='';}
                 }
+
+            if (ost<=0 && fl3==0 || prim>=10 && fl3==0)  {
+                if (ost<0) {ost=0}
+                Funcend();
+                }
+
             if (fl4==1 && new Date() - new Date(0) - Number(tt) > (2000*po - 1000)) {
                 document.getElementById('byni').style.display='';
                 document.getElementById('btn1').style.display='';
@@ -134,69 +140,7 @@
                 if (po==2) {po=0;}
                 }
 
-            if (ost<=0 && fl3==0 || prim>=10 && fl3==0)  {
-                if (ost<0) {ost=0}
-                document.getElementById('byni').style.display='none';
-                document.getElementById('btn1').style.display='none';
-                document.getElementById('btn2').style.display='none';
-                document.getElementById('btn3').style.display='none';
-                document.getElementById('btn4').style.display='none';
-                document.getElementById('btn5').style.display='none';
-                document.getElementById('btn6').style.display='none';
-                document.getElementById('btn7').style.display='none';
-                document.getElementById('btn8').style.display='none';
-                document.getElementById('btn9').style.display='none';
-                document.getElementById('btn0').style.display='none';
-                document.getElementById('btnd').style.display='none';
-                document.getElementById('vy4').style.display='none';
-                document.getElementById('prim').style.display='none';
-                document.getElementById('prnpr').style.display='none';
-                document.getElementById('timer').style.display='none';
-                document.getElementById('butt').style.display='';
-                ostf = ost;
-                if (kon==5){
-                document.getElementById('end1').innerHTML = 'На пятом уровне набрано очков: ' + ost + '.';
-                document.getElementById('end1').style.cssText = 'margin-top: 90px; font-style: italic;';
-                document.getElementById('end2').innerHTML = document.getElementById('prnpr').innerHTML = 'Верных ответов: '+ (p0 + p1) + ', <br> из них безошибочных: ' + p0 + '<br> двойных ошибок: ' + n;}
-                document.getElementById('end2').style.cssText = 'font-style: italic;';
-
-                fl3=1;
-                document.getElementById('butt').style.display='';
-                ostf = ost;
-
-                fl00={{fl00}};
-                sclvus={{sclvus}};
-                minsc={{minsc}};
-                scnow={{scnow}};
-                txta = '';
-                txtb = '';
-                pz=0;
-                pz1=0;
-                pz0=0;
-                if (ostf>Number(sclvus)){
-                pz0=1;
-                if (Number(sclvus)>0) { pz=1;
-                txta = 'Вы улучшили собственный рекорд в этом этапе на ' + (ostf-Number(sclvus)) + '.<br>';}
-                }
-                if (ostf<Number(sclvus)*0.8) {
-                txtb = 'Ваш личный рекорд пройденного этапа куда выше. Соберитесь.<br>';
-                } if (fl00==0 && ostf>Number(minsc)) {
-                pz1=1;
-                txta = txta + 'Вы попадате в ТОП-10 пятого этапа. (На данный момент) <br>';
-                } if (fl00==1 && ostf>Number(scnow)) {
-                pz1=2;
-                txta = txta + 'Ваш результат в ТОП-10 пройденного этапа на данный момент улучшен! <br>';
-                }
-                if (pz!=0 || pz1!=0) { txta = '<br>Поздравляем!<br>' + txta;}
-                if (pz0!=0 || pz1!=0) {
-                document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-                document.cookie = "lelrec15=" + sclvus + '$' + ostf;}
-                txta=txtb+txta
-                document.getElementById('end3').innerHTML = txta;
-                document.getElementById('butt').style.display='';
-
-
-            } if (fl3==0) {
+            if (fl3==0) {
             document.getElementById('timer').innerHTML = Math.floor(ost/1000);
             if (fl2==0) {
                 prim++;
@@ -218,6 +162,7 @@
                 fl2 = 0;
                 if (po==0) p0++;
                 if (po==1) p1++;
+                if (prim==9) Funcend();
                 po = 0;
                 }
                 else {
@@ -303,21 +248,45 @@
             }
 
         function Funcend() {
-            document.getElementById('butt').style.display='none';
+            document.getElementById('byni').style.display='none';
+            document.getElementById('btn1').style.display='none';
+            document.getElementById('btn2').style.display='none';
+            document.getElementById('btn3').style.display='none';
+            document.getElementById('btn4').style.display='none';
+            document.getElementById('btn5').style.display='none';
+            document.getElementById('btn6').style.display='none';
+            document.getElementById('btn7').style.display='none';
+            document.getElementById('btn8').style.display='none';
+            document.getElementById('btn9').style.display='none';
+            document.getElementById('btn0').style.display='none';
+            document.getElementById('btnd').style.display='none';
+            document.getElementById('vy4').style.display='none';
+            document.getElementById('prim').style.display='';
+            document.getElementById('prnpr').style.display='none';
+            document.getElementById('timer').style.display='none';
+            document.getElementById('prim').innerHTML = 'ЭТАП ЗАВЕРШЕН!'
+            document.getElementById('prim').style.cssText = 'margin-top:50px;';
+            localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ost);
+            localStorage.setItem('pravresh', Number(localStorage.getItem('pravresh'))+p1);
+            localStorage.setItem('bezosh', Number(localStorage.getItem('bezosh'))+p0);
+            localStorage.setItem('lvl5', ost);
+            document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+            document.cookie = "lelrec15=" + 5 + '$' + ost + '$' + (p0 + p1) + '$' + p0;
+            clearInterval(timerId);
             var txt2 = document.getElementById('wait');
             txt2.innerHTML = 'ПОЖАЛУЙСТА, ПОДОЖДИТЕ';
             txt2.style.fontStyle = 'Italic';
             localStorage.setItem('pravresh', Number(localStorage.getItem('pravresh'))+p1);
             localStorage.setItem('bezosh', Number(localStorage.getItem('bezosh'))+p0);
             localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ostf);
-            localStorage.setItem('lvl5', ostf);
+            localStorage.setItem('lvl5', ost);
             document.cookie = "totsumm=" + localStorage.getItem('totsum') + '(#)$)'
              + localStorage.getItem('pravresh') + '(#)$)' + localStorage.getItem('bezosh') + '(#)$)'
              + localStorage.getItem('lvl1') + '(#)$)' + localStorage.getItem('lvl2') + '(#)$)'
               + localStorage.getItem('lvl3') + '(#)$)' + localStorage.getItem('lvl4') + '(#)$)'
                + localStorage.getItem('lvl5');
             localStorage.setItem('key1', 0);
-            window.location.assign('itog');
+            window.location.assign('itoglv');
             }
 
         Func();
