--- a/jsprob/templates/jsprob/list2.html
+++ b/jsprob/templates/jsprob/list2.html
@@ -31,13 +31,14 @@
         tas2 ={{tas2}};
         tasz ={{tasz}};
         otv = {{otv}};
+        ti = {{ti}};
         simv = ['+', '–', '•', ':'];
         prim=-1;
         kon = Number(localStorage.getItem('kontr'))+1;
         localStorage.setItem('kontr', kon);
         var na4 = new Date() - new Date(0)
         document.getElementById('butt').style.display='none';
-        ds = 70000 - (new Date() - new Date(0) - Number(na4));
+        ds = ti - (new Date() - new Date(0) - Number(na4));
         fl2=0;
         fl1=0;
         fl3=0;
@@ -51,13 +52,13 @@
         ot='';
 
         function Func() {
-            ost = 70000 - (new Date() - new Date(0) - Number(na4)) - 3000*n;
+            ost = ti - (new Date() - new Date(0) - Number(na4)) - (ti/10-4000)*n;
             if (Math.abs(ost-ds)>5000) {
             na4 = new Date() - new Date(0) + 120000;
             alert('Контроль безопасности обнаружил смещение времени! Этап защитан не будет!');
             }
             ds = ost;
-            if (kon!=2 || ost>70000) {ost=0;}
+            if (kon!=2 || ost>ti) {ost=0;}
             addEventListener("keyup", function(event) {kk=0;});
             addEventListener("keydown", function(event) {
                   if (event.keyCode>47 && event.keyCode<58 && event.keyCode!=kk)
