--- a/jsprob/templates/jsprob/level1.html
+++ b/jsprob/templates/jsprob/level1.html
@@ -12,6 +12,7 @@
     </div>
     <script>
     function Func() {
+            console.log(localStorage.getItem('shifr').split('$'));
             document.getElementById('butt').style.display='none';
             document.getElementById('wt').innerHTML = 'GO!';
             document.getElementById('wt').style.cssText = 'font-style: italic; font-size: 112px;'
