--- a/jsprob/templates/jsprob/list1.html
+++ b/jsprob/templates/jsprob/list1.html
@@ -56,10 +56,14 @@
             ost = ti - (new Date() - new Date(0) - Number(na4));
             if (Math.abs(ost-ds)>3000) {
             na4 = new Date() - new Date(0) + 120000;
-            alert('Контроль безопасности обнаружил смещение времени! Этап защитан не будет!');
+            alert('Контроль безопасности обнаружил смещение времени! Придется начать сначала!');
             }
             ds = ost;
-            if (kon!=1 || ost>ti) {ost=0;}
+            if (kon!=1 || ost>ti)
+                {
+                if (typeof timerId !== 'undefined') {clearInterval(timerId);}
+                window.location.assign('12');
+                }
             addEventListener("keyup", function(event) {kk=0;});
             addEventListener("keydown", function(event) {
                   if (event.keyCode>47 && event.keyCode<58 && event.keyCode!=kk)
@@ -351,6 +355,7 @@
             localStorage.setItem('lvl1', ost);
             document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
             document.cookie = "lelrec15=" + 1 + '$' + ost + '$' + (p0 + p1) + '$' + p0;
+            //if (typeof timerId !== 'undefined') {clearInterval(timerId);}
             clearInterval(timerId);
             window.location.assign('itoglv');
               }
