'adding_TOPs_tables'

--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -32,7 +32,7 @@
         </br></br>
         {% endif %}
         {% endif %}
-        <a href="{% url 'toptab' %}" id = "butt3" class="btn btn-success" onclick="Func()"> ТОП ИГРОКОВ </a>
+        <a href="{% url 'toptab' %}" id = "butt3" class="btn btn-success" onclick="Func()"> ТОП-ы ИГРОКОВ </a>
         <a href="{% url 'instr' %}" id = "butt6" class="btn btn-success" onclick="Func()"> ИНСТРУКЦИЯ </a></br></br>
 
         <h4> Обращаем внимание на сроки турнира: с 10.10.2022 по 31.10.2022) </h4>
