--- a/jsprob/templates/jsprob/itoglv.html
+++ b/jsprob/templates/jsprob/itoglv.html
@@ -20,7 +20,7 @@
          <h5> {{txt2}} </h5>
         </br>
         <h2 id ='wt' style="font-style: italic"></h2>
-        <button class="btn btn-danger btn" id = 'butt' type="submit" name="prod" > ПРОДОЛЖИТЬ </button></br></br>
+        <button class="btn btn-danger btn" id = 'butt' type="submit" name="prod" onclick="Func()"> ПРОДОЛЖИТЬ </button></br></br>
     </div>
     </form>
 
