--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -6,22 +6,45 @@
     <h2 class="featuress" id = 'nomb' style="font-style: italic; font-size: max(20px, 3vw);"> Здравствуйте{{nm}}! </h2>
     <h3 class="featuress" id = 'wait0' style="font-style: italic; font-size: max(17px, 2.5vw);"> III Турнир по устному счету уже начался! </h3>
     <h3 class="featuress" id = 'wait1' style="font-style: italic; font-size: max(14px, 2.2vw);"> Участвовать могут все: от мала до велика. </h3>
-   <!-- <h3 class="featuress"> Django: {{a}} </h3>
-    <h3 class="featuress" id = 'wa'>  </h3>-->
 </aside>
 
     <div class="features">
+
+        <div class="column-left" style='{{st}}'>
+          {% if fl1 == 1 %}
+             <h5 class='leftstr' style='color:blue; font-size: max(14px, 2vw)'> Лучшие результаты за последние дни: </h5>
+             {% for p in p1 %}
+             <h6 class='leftstr 'style='color:red; font-size: max(12px, 1.7vw)'> {{p}} </h6>
+             {% endfor %}
+          {% else %}
+             <h5 class='leftstr' style='color:blue; font-size: max(14px, 2vw)' align="left"> {{prit.0}} </h5>
+             <h6 class='leftstr' style='color:blue; font-size: max(12px, 1.7vw)' align="right"> {{prit.1}} </h6>
+          {% endif %}
+        </div>
+
+
+         <div class="column-right">
+         <a style="font-size: max(12px, 1.2vw);" href="{% url 'toptab' %}" id = "butt3" class="btn btn-success btn-sm" onclick="Func()"> ТОП-ы ИГРОКОВ </a>
+         <div style="height:10px"></div>
+         <a style="font-size: max(12px, 1.2vw);" href="{% url 'instr' %}" id = "butt6" class="btn btn-success btn-sm" onclick="Func()"> ИНСТРУКЦИЯ </a></br>
+         <div style="height:10px"></div>
+         <a style="font-size: max(12px, 1.2vw);" href="{% url 'toptab' %}" id = "butt7" class="btn btn-success btn-sm" onclick="Func()"> Достижения </a>
+         </div>
+
+        <div style="clear: left"></div>
+
+
          <form action="" method="get">
             {% csrf_token %}
          <h4 id = 'wait'> </h4>
         {% if not user.is_authenticated %}
         <h4> <input type="text" id="inpu" name="lg" placeholder='Ваш уникальный Логин' maxlength="40"  size="20"> </h4></br>
-        <button class="btn btn-success btn" id = 'butt1' type="submit" name="intlg" onclick="Func()"> ВВЕСТИ </button></br></br>
-        <button class="btn btn-danger btn" id = 'butt2' type="submit" name="reg" onclick="Func()"> Зарегистрироваться </button></br></br>
+        <button style="font-size: max(13px, 1.3vw);" class="btn btn-success btn" id = 'butt1' type="submit" name="intlg" onclick="Func()"> ВВЕСТИ </button></br></br>
+        <button style="font-size: max(13px, 1.3vw);" class="btn btn-danger btn" id = 'butt2' type="submit" name="reg" onclick="Func()"> Зарегистрироваться </button></br></br>
         {% else %}
         </br>
         {% if fl0 == '0' %}
-        <a href="{% url 'begin' %}" id = "butt4" class="btn btn-success" onclick="Func()"> НАЧАТЬ ИГРУ </a></br></br>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'begin' %}" id = "butt4" class="btn btn-success" onclick="Func()"> НАЧАТЬ ИГРУ </a></br></br>
         {% else %}
         <h4> ПОСМОТРИТЕ, ПОЖАЛУЙТСА, ОБЪЯВЛЕНИЕ НИЖЕ! </h4></br>
         {% endif %}
@@ -32,8 +55,8 @@
         </br></br>
         {% endif %}
         {% endif %}
-        <a href="{% url 'toptab' %}" id = "butt3" class="btn btn-success" onclick="Func()"> ТОП-ы ИГРОКОВ </a>
-        <a href="{% url 'instr' %}" id = "butt6" class="btn btn-success" onclick="Func()"> ИНСТРУКЦИЯ </a></br></br>
+
+
 
         <h4> Обращаем внимание на сроки турнира: с 10.10.2022 по 31.10.2022) </h4>
         <!--<h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>-->
@@ -51,6 +74,20 @@
         h2, h3, h4, h5 {
           font-style: italic;
         }
+
+        .column-left {
+        float: left;
+        width: 75%;
+        text-align: left;
+        padding-left: 3vw;
+        }
+
+        .column-right {
+        float: left;
+        width: 25%;
+        text-align: center;
+        }
+
     </style>
 
     <script>
@@ -64,6 +101,7 @@
 
     document.getElementById('butt3').style.display='none';
     document.getElementById('butt6').style.display='none';
+    document.getElementById('butt7').style.display='none';
     localStorage.setItem('vrk', 10000);
     var txt2 = document.getElementById('wait');
     txt2.innerHTML = 'ПОЖАЛУЙСТА, ОЖИДАЙТЕ';
