'added_my_progress'

--- a/jsprob/templates/jsprob/ujuse.html
+++ b/jsprob/templates/jsprob/ujuse.html
@@ -5,8 +5,8 @@
     <div class="features">
         </br>
         </br>
-        <h2> УВЫ! </h2></br>
-        <h2> Такой логин уже зарегистрирован, придумайте другой. </h2></br>
+        <h2 style="font-style: italic; font-size: max(28px, 3vw);"> УВЫ! </h2></br>
+        <h2 style="font-style: italic; font-size: max(20px, 2.5vw);"> Такой логин уже зарегистрирован, придумайте другой. </h2></br>
         <form action="" method="get">
              <a href="{% url 'regist' %}" class="btn btn-success"> ЯСНО </a>
         </form>
