--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -3,32 +3,34 @@
 {% block content %}
 
 <aside>
-    <h2 class="featuress" id = 'nomb' style="font-style: italic; font-size: max(20px, 3vw);"> Здравствуйте{{nm}}! </h2>
-    <h3 class="featuress" id = 'wait0' style="font-style: italic; font-size: max(17px, 2.5vw);"> III Турнир по устному счету уже начался! </h3>
-    <h3 class="featuress" id = 'wait1' style="font-style: italic; font-size: max(14px, 2.2vw);"> Участвовать могут все: от мала до велика. </h3>
+    <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: max(20px, 2.5vw);"> Здравствуйте{{nm}}! </h5>
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: max(17px, 2.2vw);"> III Турнир по устному счету уже начался! </h5>
+    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: max(14px, 2vw);"> Участвовать могут все: от мала до велика. </h5>
 </aside>
 
     <div class="features">
 
         <div class="column-left" style='{{st}}'>
           {% if fl1 == 1 %}
-             <h5 class='leftstr' style='color:blue; font-size: max(14px, 2vw)'> Лучшие результаты за последние дни: </h5>
+             <h5 class='leftstr' style='color:blue; font-size: max(13px, 1.4vw)'> Лучшие результаты за последние дни: </h5>
              {% for p in p1 %}
-             <h6 class='leftstr 'style='color:red; font-size: max(12px, 1.7vw)'> {{p}} </h6>
+             <h6 class='leftstr 'style='color:red; font-size: max(11px, 1.2vw)'> {{p}} </h6>
              {% endfor %}
           {% else %}
-             <h5 class='leftstr' style='color:blue; font-size: max(14px, 2vw)' align="left"> {{prit.0}} </h5>
-             <h6 class='leftstr' style='color:blue; font-size: max(12px, 1.7vw)' align="right"> {{prit.1}} </h6>
+             <h5 class='leftstr' style='color:blue; font-size: max(14px, 1.6vw)' align="left"> {{prit.0}} </h5>
+             <h6 class='leftstr' style='color:blue; font-size: max(12px, 1.4vw)' align="right"> {{prit.1}} </h6>
           {% endif %}
         </div>
 
 
          <div class="column-right">
-         <a style="font-size: max(12px, 1.2vw);" href="{% url 'toptab' %}" id = "butt3" class="btn btn-success btn-sm" onclick="Func()"> ТОП-ы ИГРОКОВ </a>
+         <a style="font-size: max(12px, 1.1vw);" href="{% url 'toptab' %}" id = "butt3" class="btn btn-success btn-sm" onclick="Func()"> ТОП-ы ИГРОКОВ </a>
          <div style="height:10px"></div>
-         <a style="font-size: max(12px, 1.2vw);" href="{% url 'instr' %}" id = "butt6" class="btn btn-success btn-sm" onclick="Func()"> ИНСТРУКЦИЯ </a></br>
+         <a style="font-size: max(12px, 1.1vw);" href="{% url 'instr' %}" id = "butt6" class="btn btn-success btn-sm" onclick="Func()"> ИНСТРУКЦИЯ </a></br>
+         {% if user.is_authenticated %}
          <div style="height:10px"></div>
-         <a style="font-size: max(12px, 1.2vw);" href="{% url 'toptab' %}" id = "butt7" class="btn btn-success btn-sm" onclick="Func()"> Достижения </a>
+         <a style="font-size: max(12px, 1.1vw);" href="{% url 'progress' %}" id = "butt7" class="btn btn-success btn-sm" onclick="Func()"> Достижения </a>
+         {% endif %}
          </div>
 
         <div style="clear: left"></div>
@@ -39,12 +41,14 @@
          <h4 id = 'wait'> </h4>
         {% if not user.is_authenticated %}
         <h4> <input type="text" id="inpu" name="lg" placeholder='Ваш уникальный Логин' maxlength="40"  size="20"> </h4></br>
-        <button style="font-size: max(13px, 1.3vw);" class="btn btn-success btn" id = 'butt1' type="submit" name="intlg" onclick="Func()"> ВВЕСТИ </button></br></br>
-        <button style="font-size: max(13px, 1.3vw);" class="btn btn-danger btn" id = 'butt2' type="submit" name="reg" onclick="Func()"> Зарегистрироваться </button></br></br>
+        <button style="font-size: max(13px, 1.2vw);" class="btn btn-success btn" id = 'butt1' type="submit" name="intlg" onclick="Func()"> ВВЕСТИ </button></br>
+             <div style="height:10px"></div>
+        <button style="font-size: max(13px, 1.2vw);" class="btn btn-danger btn" id = 'butt2' type="submit" name="reg" onclick="Func()"> Зарегистрироваться </button></br></br>
         {% else %}
         </br>
         {% if fl0 == '0' %}
-        <a style="font-size: max(13px, 1.3vw);" href="{% url 'begin' %}" id = "butt4" class="btn btn-success" onclick="Func()"> НАЧАТЬ ИГРУ </a></br></br>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'begin' %}" id = "butt4" class="btn btn-success" onclick="Func()"> НАЧАТЬ ИГРУ </a></br>
+             <div style="height:10px"></div>
         {% else %}
         <h4> ПОСМОТРИТЕ, ПОЖАЛУЙТСА, ОБЪЯВЛЕНИЕ НИЖЕ! </h4></br>
         {% endif %}
@@ -52,21 +56,22 @@
 
         <a href="{% url 'logout' %}" id = "butt5" class="btn btn-success" onclick="Func()"> Я не {{nm}} </a>
         <a href="{% url 'reset' %}" class="btn btn-danger"> Сброс </a>
-        </br></br>
+         </br>
+             <div style="height:10px"></div>
         {% endif %}
         {% endif %}
 
 
 
-        <h4> Обращаем внимание на сроки турнира: с 10.10.2022 по 31.10.2022) </h4>
+        <h4 style='font-size: max(16px, 1.8vw)'> Обращаем внимание на сроки турнира: с 10.10.2022 по 31.10.2022) </h4>
         <!--<h4> Производится коррекция. Результат лукавых ТОП-ов будет удален.</h4>-->
-        <h4 style="color: red"> ВНИМАНИЕ! </h4>
-        <h5> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
-        <h5> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
-        <h5> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-        <h5> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
-        <h5> 1-3е места – 200рублей, 4-10е места – 100р.</h5>
-        <h5> Окончательный итого будет подведен 31.10.2022 в 21:00 (по московскому времени) </h5>
+        <h4 style="color: red; font-size: max(16px, 1.8vw)"> ВНИМАНИЕ! </h4>
+        <h5 style='font-size: max(14px, 1.4vw)'> Если Вы неправильно внесли свои данные при регистрации и желаете сохранить свои достижения в ТОП-е, </h5>
+        <h5 style='font-size: max(14px, 1.4vw)'> <a href="https://vk.com/vovartus" target="_blank"> обозначьте свои истинные ФИО в ЛС </a> . Участники с некорректными ФИО(ФИК) удаляются! </h5>
+        <h5 style='font-size: max(14px, 1.4vw)'> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
+        <h5 style='font-size: max(14px, 1.4vw)'> Десять участников, занявшие первые места в ТОП-е игроков, получат символические вознаграждения: </h5>
+        <h5 style='font-size: max(14px, 1.4vw)'> 1-3е места – 200рублей, 4-10е места – 100р.</h5>
+        <h5 style='font-size: max(14px, 1.4vw)'> Окончательный итого будет подведен 31.10.2022 в 21:00 (по московскому времени) </h5>
     </form>
     </div>
 
@@ -80,6 +85,7 @@
         width: 75%;
         text-align: left;
         padding-left: 3vw;
+        padding-right: 1vw;
         }
 
         .column-right {
@@ -121,7 +127,7 @@
     st = '';
     while(i < 10)
         {
-        n = Math.floor(Math.random() * 50) + 11;
+        n = Math.floor(Math.random() * 9) + 1;
         if (i != 9) {st = st + n + '$';}
         else {st = st + n;}
         i++;
