--- a/jsprob/templates/jsprob/list1.html
+++ b/jsprob/templates/jsprob/list1.html
@@ -28,6 +28,20 @@
 
     </div>
     <script>
+        as = 'a0s-d7as6fds8/';
+        for (i = 0; i < as.length; i++)
+            {
+             u = 0;
+             sg = Number(as[i])
+             if (Number.isInteger(sg))
+                  {
+                  u = 1;
+                  console.log(sg);
+                  }
+             //console.log(sg, as[i], u, Number.isInteger(Number(sg)));
+             if (u == 1) {console.log(Number(sg)%3)}
+            }
+        alert('dfd');
         tas1 = {{tas1}};
         tas2 = {{tas2}};
         tasz = {{tasz}};
