--- a/jsprob/templates/jsprob/priv.html
+++ b/jsprob/templates/jsprob/priv.html
@@ -125,10 +125,9 @@
     localStorage.setItem('lvl6', 0);
     i = 0;
     st = '';
-    while(i < 10)
-        {
+    while(i < 200)  {
         n = Math.floor(Math.random() * 9) + 1;
-        if (i != 9) {st = st + n + '$';}
+        if (i != 199) {st = st + n + '$';}
         else {st = st + n;}
         i++;
         }
