--- a/jsprob/templates/jsprob/list6.html
+++ b/jsprob/templates/jsprob/list6.html
@@ -1,5 +1,5 @@
 {% extends 'jsprob/shabl.html' %}
-{% block title %} Уровень 5 {% endblock %}
+{% block title %} Уровень 6 {% endblock %}
 {% block content %}
 
     <div class="features">
@@ -27,6 +27,8 @@
         <a href="{% url 'home' %}" id = "byni" class="btn btn-danger btn-sm"> ЗАВЕРШИТЬ! Перейти в главное меню. </a>
     </div>
     <script>
+
+
         tas1 ={{tas1}};
         tas2 ={{tas2}};
         tasz ={{tasz}};
@@ -274,18 +276,18 @@
             localStorage.setItem('totsum', Number(localStorage.getItem('totsum'))+ost);
             localStorage.setItem('pravresh', Number(localStorage.getItem('pravresh'))+p1);
             localStorage.setItem('bezosh', Number(localStorage.getItem('bezosh'))+p0);
-            localStorage.setItem('lvl5', ost);
+            localStorage.setItem('lvl6', ost);
             document.cookie = "lelrec15=" +'=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
-            document.cookie = "lelrec15=" + 5 + '$' + ost + '$' + (p0 + p1) + '$' + p0;
-            //var txt2 = document.getElementById('wait');
-            //txt2.innerHTML = 'ПОЖАЛУЙСТА, ПОДОЖДИТЕ';
-            //txt2.style.fontStyle = 'Italic';
-            //document.cookie = "totsumm=" + localStorage.getItem('totsum') + '(#)$)'
-            // + localStorage.getItem('pravresh') + '(#)$)' + localStorage.getItem('bezosh') + '(#)$)'
-            // + localStorage.getItem('lvl1') + '(#)$)' + localStorage.getItem('lvl2') + '(#)$)'
-            //  + localStorage.getItem('lvl3') + '(#)$)' + localStorage.getItem('lvl4') + '(#)$)'
-            //   + localStorage.getItem('lvl5');
-            //localStorage.setItem('key1', 0);
+            document.cookie = "lelrec15=" + 6 + '$' + ost + '$' + (p0 + p1) + '$' + p0;
+            var txt2 = document.getElementById('wait');
+            txt2.innerHTML = 'ПОЖАЛУЙСТА, ПОДОЖДИТЕ';
+            txt2.style.fontStyle = 'Italic';
+            document.cookie = "totsumm=" + localStorage.getItem('totsum') + '(#)$)'
+             + localStorage.getItem('pravresh') + '(#)$)' + localStorage.getItem('bezosh') + '(#)$)'
+             + localStorage.getItem('lvl1') + '(#)$)' + localStorage.getItem('lvl2') + '(#)$)'
+              + localStorage.getItem('lvl3') + '(#)$)' + localStorage.getItem('lvl4') + '(#)$)'
+               + localStorage.getItem('lvl5') + '(#)$)' + localStorage.getItem('lvl6');
+            localStorage.setItem('key1', 0);
             clearInterval(timerId);
             window.location.assign('itoglv');
             }
